# useSWIG-Example

./: CMakeLists.txt  Dockerfile  Example.i
include/: example.h
src/: example.cpp
